# rust-ssh-sftp

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: CODE_CLEANUP_SUMMARY.md  PASSWORD_VIEW_GUIDE.md  PROJECT_CHECKLIST.md  PROJECT_COMPLETION_SUMMARY.md  TESTING_REPORT.md  USAGE_GUIDE.md
src/: cli.rs  config.rs  crypto.rs  gui.rs  interactive_menu.rs  main.rs  sftp.rs  ssh.rs  ssh_russh.rs  terminal.rs  terminal_russh.rs
